LNN completa con anche i Test

--- a/Progetto/LNN/LNN.ipynb
+++ b/Progetto/LNN/LNN.ipynb
@@ -53,7 +53,14 @@
     "from tensorflow.keras import mixed_precision\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.layers import Input, Dense, TimeDistributed, RepeatVector\n",
-    "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "from tensorflow.keras.optimizers.schedules import CosineDecayRestarts, ExponentialDecay\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping, CSVLogger\n",
+    "from ncps.wirings import AutoNCP\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# PATH\n",
     "INPUT_DIR = '../Pre-Elaborazione Dati/Dataset' \n",
@@ -165,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "205196ed",
    "metadata": {},
    "outputs": [
@@ -212,34 +219,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "13a65588",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1764090248.612338   12020 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4130 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modello LNN (Liquid Neural Network) creato e compilato.\n",
-      "Model: \"model_1\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " input_2 (InputLayer)        [(None, 30, 4)]           0         \n",
+      " input_1 (InputLayer)        [(None, 30, 4)]           0         \n",
       "                                                                 \n",
-      " cf_c_2 (CfC)                (None, 32)                29568     \n",
+      " cf_c (CfC)                  (None, 64)                123844    \n",
       "                                                                 \n",
-      " repeat_vector_1 (RepeatVec  (None, 30, 32)            0         \n",
-      " tor)                                                            \n",
+      " repeat_vector (RepeatVecto  (None, 30, 64)            0         \n",
+      " r)                                                              \n",
       "                                                                 \n",
-      " cf_c_3 (CfC)                (None, 30, 32)            33152     \n",
+      " cf_c_1 (CfC)                (None, 30, 64)            154564    \n",
       "                                                                 \n",
-      " time_distributed_1 (TimeDi  (None, 30, 4)             132       \n",
-      " stributed)                                                      \n",
+      " time_distributed (TimeDist  (None, 30, 4)             260       \n",
+      " ributed)                                                        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 62852 (245.52 KB)\n",
-      "Trainable params: 62852 (245.52 KB)\n",
+      "Total params: 278668 (1.06 MB)\n",
+      "Trainable params: 278668 (1.06 MB)\n",
       "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n"
      ]
@@ -247,27 +261,23 @@
    ],
    "source": [
     "n_features = len(COLONNE_FEATURES)\n",
-    "latent_dim = 32 # Stessa dimensione dell'LSTM\n",
+    "latent_dim = 128\n",
+    "output_dim = 64\n",
+    "wiring = AutoNCP(latent_dim,output_dim) # Definisce una wiring sparsa\n",
     "\n",
     "# Encoder\n",
     "inputs = Input(shape=(WINDOW_SIZE, n_features))\n",
+    "# LAYER LIQUIDO 1 (Encoder): USIAMO WIRING SPARSA\n",
+    "lnn_encoder = CfC(wiring, return_sequences=False, mixed_memory=True)(inputs) \n",
     "\n",
-    "# LAYER LIQUIDO 1 (Encoder)\n",
-    "lnn_encoder = CfC(latent_dim, return_sequences=False, mixed_memory=True)(inputs)\n",
-    "\n",
-    "# Ponte\n",
+    "# Decoder\n",
     "repeat_vector = RepeatVector(WINDOW_SIZE)(lnn_encoder)\n",
+    "lnn_decoder = CfC(wiring, return_sequences=True, mixed_memory=True)(repeat_vector)\n",
     "\n",
-    "# LAYER LIQUIDO 2 (Decoder)\n",
-    "lnn_decoder = CfC(latent_dim, return_sequences=True, mixed_memory=True)(repeat_vector)\n",
-    "\n",
-    "# Output\n",
     "output = TimeDistributed(Dense(n_features))(lnn_decoder)\n",
     "\n",
-    "model_lnn = Model(inputs, output)\n",
-    "model_lnn.compile(optimizer='adam', loss='mae')\n",
+    "model_lnn = Model(inputs, output) # Rinominato per evitare confusione\n",
     "\n",
-    "print(\"Modello LNN (Liquid Neural Network) creato e compilato.\")\n",
     "model_lnn.summary()"
    ]
   },
@@ -281,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "1ca56dcc",
    "metadata": {},
    "outputs": [
@@ -289,101 +299,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Modello Resettato.\n",
-      "Epoch 1/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.6322\n",
-      "Epoch 1: val_loss improved from inf to 0.79569, saving model to lnn_autoencoder_best.keras\n",
-      "40000/40000 [==============================] - 2488s 62ms/step - loss: 0.6322 - val_loss: 0.7957\n",
-      "Epoch 2/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.5069\n",
-      "Epoch 2: val_loss improved from 0.79569 to 0.68646, saving model to lnn_autoencoder_best.keras\n",
-      "40000/40000 [==============================] - 2492s 62ms/step - loss: 0.5069 - val_loss: 0.6865\n",
-      "Epoch 3/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.5474\n",
-      "Epoch 3: val_loss did not improve from 0.68646\n",
-      "40000/40000 [==============================] - 2500s 63ms/step - loss: 0.5474 - val_loss: 0.9672\n",
-      "Epoch 4/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.5415\n",
-      "Epoch 4: val_loss improved from 0.68646 to 0.62918, saving model to lnn_autoencoder_best.keras\n",
-      "40000/40000 [==============================] - 2503s 63ms/step - loss: 0.5415 - val_loss: 0.6292\n",
-      "Epoch 5/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.5472\n",
-      "Epoch 5: val_loss improved from 0.62918 to 0.57174, saving model to lnn_autoencoder_best.keras\n",
-      "40000/40000 [==============================] - 2504s 63ms/step - loss: 0.5472 - val_loss: 0.5717\n",
-      "Epoch 6/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.5822\n",
-      "Epoch 6: val_loss did not improve from 0.57174\n",
-      "40000/40000 [==============================] - 2512s 63ms/step - loss: 0.5822 - val_loss: 0.5965\n",
-      "Epoch 7/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.6142\n",
-      "Epoch 7: val_loss improved from 0.57174 to 0.57095, saving model to lnn_autoencoder_best.keras\n",
-      "40000/40000 [==============================] - 2507s 63ms/step - loss: 0.6142 - val_loss: 0.5710\n",
-      "Epoch 8/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.6351\n",
-      "Epoch 8: val_loss did not improve from 0.57095\n",
-      "40000/40000 [==============================] - 2523s 63ms/step - loss: 0.6351 - val_loss: 0.8015\n",
-      "Epoch 9/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.7393\n",
-      "Epoch 9: val_loss did not improve from 0.57095\n",
-      "40000/40000 [==============================] - 2525s 63ms/step - loss: 0.7393 - val_loss: 0.7529\n",
-      "Epoch 10/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.6538\n",
-      "Epoch 10: val_loss did not improve from 0.57095\n",
-      "40000/40000 [==============================] - 2518s 63ms/step - loss: 0.6538 - val_loss: 0.7060\n",
-      "Epoch 11/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.6680\n",
-      "Epoch 11: val_loss did not improve from 0.57095\n",
-      "40000/40000 [==============================] - 2524s 63ms/step - loss: 0.6680 - val_loss: 0.7260\n",
-      "Epoch 12/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.6454\n",
-      "Epoch 12: val_loss did not improve from 0.57095\n",
-      "40000/40000 [==============================] - 2524s 63ms/step - loss: 0.6454 - val_loss: 0.7643\n",
-      "Epoch 13/100\n",
-      "40000/40000 [==============================] - ETA: 0s - loss: 0.7540\n",
-      "Epoch 13: val_loss did not improve from 0.57095\n",
-      "40000/40000 [==============================] - 2467s 62ms/step - loss: 0.7540 - val_loss: 0.7785\n",
-      "Epoch 14/100\n",
-      " 5305/40000 [==>...........................] - ETA: 35:22 - loss: 0.7949\n",
-      "Interrotto manualmente.\n"
+      "Epoch 1/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.1244\n",
+      "Epoch 1: val_loss improved from inf to 0.05828, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3768s 94ms/step - loss: 0.1244 - val_loss: 0.0583\n",
+      "Epoch 2/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0950\n",
+      "Epoch 2: val_loss improved from 0.05828 to 0.05225, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3991s 100ms/step - loss: 0.0950 - val_loss: 0.0523\n",
+      "Epoch 3/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0402\n",
+      "Epoch 3: val_loss improved from 0.05225 to 0.03114, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 4983s 125ms/step - loss: 0.0402 - val_loss: 0.0311\n",
+      "Epoch 4/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0327\n",
+      "Epoch 4: val_loss improved from 0.03114 to 0.02890, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3857s 96ms/step - loss: 0.0327 - val_loss: 0.0289\n",
+      "Epoch 5/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0342\n",
+      "Epoch 5: val_loss did not improve from 0.02890\n",
+      "40000/40000 [==============================] - 3899s 97ms/step - loss: 0.0342 - val_loss: 0.0422\n",
+      "Epoch 6/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0385\n",
+      "Epoch 6: val_loss did not improve from 0.02890\n",
+      "40000/40000 [==============================] - 3861s 97ms/step - loss: 0.0385 - val_loss: 0.0570\n",
+      "Epoch 7/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0331\n",
+      "Epoch 7: val_loss did not improve from 0.02890\n",
+      "40000/40000 [==============================] - 3815s 95ms/step - loss: 0.0331 - val_loss: 0.0694\n",
+      "Epoch 8/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0411\n",
+      "Epoch 8: val_loss did not improve from 0.02890\n",
+      "40000/40000 [==============================] - 3805s 95ms/step - loss: 0.0411 - val_loss: 0.0496\n",
+      "Epoch 9/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0324\n",
+      "Epoch 9: val_loss did not improve from 0.02890\n",
+      "40000/40000 [==============================] - 3806s 95ms/step - loss: 0.0324 - val_loss: 0.0527\n",
+      "Epoch 10/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0260\n",
+      "Epoch 10: val_loss improved from 0.02890 to 0.02820, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3798s 95ms/step - loss: 0.0260 - val_loss: 0.0282\n",
+      "Epoch 11/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0113\n",
+      "Epoch 11: val_loss did not improve from 0.02820\n",
+      "40000/40000 [==============================] - 3814s 95ms/step - loss: 0.0113 - val_loss: 0.0331\n",
+      "Epoch 12/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0072\n",
+      "Epoch 12: val_loss improved from 0.02820 to 0.02764, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3803s 95ms/step - loss: 0.0072 - val_loss: 0.0276\n",
+      "Epoch 13/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0075\n",
+      "Epoch 13: val_loss improved from 0.02764 to 0.01760, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3807s 95ms/step - loss: 0.0075 - val_loss: 0.0176\n",
+      "Epoch 14/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0161\n",
+      "Epoch 14: val_loss improved from 0.01760 to 0.01702, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3804s 95ms/step - loss: 0.0161 - val_loss: 0.0170\n",
+      "Epoch 15/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0288\n",
+      "Epoch 15: val_loss improved from 0.01702 to 0.01623, saving model to lnn_autoencoder_best.weights.h5\n",
+      "40000/40000 [==============================] - 3803s 95ms/step - loss: 0.0288 - val_loss: 0.0162\n",
+      "Epoch 16/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0273\n",
+      "Epoch 16: val_loss did not improve from 0.01623\n",
+      "40000/40000 [==============================] - 3693s 92ms/step - loss: 0.0273 - val_loss: 0.0214\n",
+      "Epoch 17/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0200\n",
+      "Epoch 17: val_loss did not improve from 0.01623\n",
+      "40000/40000 [==============================] - 3660s 91ms/step - loss: 0.0200 - val_loss: 0.0257\n",
+      "Epoch 18/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0204\n",
+      "Epoch 18: val_loss did not improve from 0.01623\n",
+      "40000/40000 [==============================] - 3700s 92ms/step - loss: 0.0204 - val_loss: 0.0306\n",
+      "Epoch 19/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.0262\n",
+      "Epoch 19: val_loss did not improve from 0.01623\n",
+      "40000/40000 [==============================] - 3668s 92ms/step - loss: 0.0262 - val_loss: 0.0207\n",
+      "Epoch 20/20\n",
+      "40000/40000 [==============================] - ETA: 0s - loss: 0.8200\n",
+      "Epoch 20: val_loss did not improve from 0.01623\n",
+      "40000/40000 [==============================] - 3628s 91ms/step - loss: 0.8200 - val_loss: 1.4613\n",
+      "Restoring model weights from the end of the best epoch: 15.\n",
+      "\n",
+      "Addestramento LNN Completato.\n"
      ]
     }
    ],
    "source": [
-    "# Parametri\n",
-    "STEPS_PER_EPOCH_LNN = 40000\n",
+    "STEPS_PER_EPOCH_LNN = 40000 \n",
     "VALIDATION_STEPS_LNN = 8000 \n",
-    "EPOCHS_LNN = 100 \n",
+    "EPOCHS_LNN = 20 \n",
     "\n",
-    "# DEFINIZIONE OTTIMIZZATORE\n",
-    "optimizer_lnn = tf.keras.optimizers.Adam(\n",
-    "    learning_rate=0.00025, \n",
-    "    clipvalue=0.5          # Taglio netto ai gradienti\n",
+    "initial_learning_rate = 0.0005  \n",
+    "T_0 = 5\n",
+    "lr_schedule = CosineDecayRestarts(\n",
+    "    initial_learning_rate,\n",
+    "    first_decay_steps=T_0 * STEPS_PER_EPOCH_LNN,\n",
+    "    t_mul=2.0,                  \n",
+    "    m_mul=0.9,                  \n",
+    "    alpha=1e-6 # LR minimo\n",
     ")\n",
     "\n",
-    "# RICOMPILAZIONE (Reset)\n",
-    "model_lnn.compile(optimizer=optimizer_lnn, loss='mae')\n",
-    "print(\"Modello Resettato.\")\n",
+    "# OTTIMIZZATORE\n",
+    "optimizer_lnn_final = Adam(\n",
+    "    learning_rate=lr_schedule, \n",
+    "    clipvalue=0.5             \n",
+    ")\n",
     "\n",
-    "# CALLBACKS\n",
+    "model_lnn.compile(optimizer=optimizer_lnn_final, loss='mae')\n",
+    "\n",
+    "#CALLBACKS\n",
     "checkpoint = ModelCheckpoint(\n",
-    "    'lnn_autoencoder_best.keras', \n",
-    "    monitor='val_loss', \n",
-    "    save_best_only=True, \n",
-    "    mode='min', \n",
-    "    verbose=1\n",
+    "    'lnn_autoencoder_best.weights.h5',\n",
+    "    monitor='val_loss',\n",
+    "    save_best_only=True,     \n",
+    "    mode='min',\n",
+    "    verbose=1,\n",
+    "    save_weights_only=True # Salva solo i pesi numerici\n",
     ")\n",
     "\n",
     "early_stopping = EarlyStopping(\n",
-    "    monitor='val_loss', \n",
-    "    patience=10, # Diamo tempo perché imparerà più lentamente\n",
-    "    mode='min', \n",
-    "    verbose=1, \n",
-    "    restore_best_weights=True\n",
+    "    monitor='val_loss', patience=10, mode='min', verbose=1, restore_best_weights=True\n",
     ")\n",
     "\n",
-    "csv_logger = tf.keras.callbacks.CSVLogger('training_log_lnn_v4.csv', append=True)\n",
+    "csv_logger = tf.keras.callbacks.CSVLogger('training_log_lnn.csv', append=True)\n",
     "\n",
-    "#START\n",
+    "# START\n",
     "try:\n",
     "    history_lnn = model_lnn.fit(\n",
     "        train_gen,\n",
@@ -394,7 +435,7 @@
     "        callbacks=[checkpoint, early_stopping, csv_logger],\n",
     "        verbose=1\n",
     "    )\n",
-    "    print(\"\\nAddestramento LNN Completato!\")\n",
+    "    print(\"\\nAddestramento LNN Completato.\")\n",
     "    \n",
     "except KeyboardInterrupt:\n",
     "    print(\"\\nInterrotto manualmente.\")"
