mancano solo i notebook

--- a/Progetto/LSMT_V2/LSMT.ipynb
+++ b/Progetto/LSMT_V2/LSMT.ipynb
@@ -20,10 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "2a5896be",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-30 17:32:14.341563: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-11-30 17:32:14.385368: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-11-30 17:32:15.206644: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -318,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c20ffe8d",
    "metadata": {},
    "outputs": [
@@ -442,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6ac41e21",
    "metadata": {},
    "outputs": [
@@ -455,7 +465,7 @@
       "  Scansione lunghezze file 16/16...\n",
       "Scansione completata.\n",
       "Trovate 113,736,332 finestre totali.\n",
-      "Steps per Epoca (Batch Size 64): 1777131\n",
+      "Steps per Epoca (Batch Size 256): 444283\n",
       "---------------------------------------------------------------------------\n",
       "\n",
       "Avvio calcolo steps per il Validation Set...\n",
@@ -463,12 +473,12 @@
       "  Scansione lunghezze file 4/4...\n",
       "Scansione completata.\n",
       "Trovate 26,771,696 finestre totali.\n",
-      "Steps per Epoca (Batch Size 64): 418308\n",
+      "Steps per Epoca (Batch Size 256): 104577\n",
       "---------------------------------------------------------------------------\n",
       "\n",
       "--- Calcolo Steps Completato ---\n",
-      "Training Steps per Epoca: 1777131\n",
-      "Validation Steps per Epoca: 418308\n"
+      "Training Steps per Epoca: 444283\n",
+      "Validation Steps per Epoca: 104577\n"
      ]
     }
    ],
@@ -494,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a4b71cf5",
    "metadata": {},
    "outputs": [
@@ -568,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "6fb9e219",
    "metadata": {},
    "outputs": [
@@ -577,7 +587,7 @@
      "output_type": "stream",
      "text": [
       "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1764520066.884366    9852 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4130 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
+      "I0000 00:00:1764520369.379556   10195 gpu_device.cc:2020] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4130 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 4050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.9\n"
      ]
     },
     {
@@ -735,10 +745,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c4c05ffa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avvio Addestramento LSTM su GPU RTX 4050\n",
+      "Stima durata epoca: ~32 minuti\n",
+      "Batch Size: 256\n",
+      "----------------------------------------\n",
+      "Epoch 1/50\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-11-30 17:32:54.619796: E tensorflow/core/util/util.cc:131] oneDNN supports DT_HALF only on platforms with AVX-512. Falling back to the default Eigen-based implementation if present.\n",
+      "2025-11-30 17:32:54.668149: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:473] Loaded cuDNN version 91600\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m 99996/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - loss: 0.0936\n",
+      "Epoch 1: val_loss improved from None to 0.04003, saving model to lstm_autoencoder_best.keras\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m902s\u001b[0m 9ms/step - loss: 0.0614 - val_loss: 0.0400\n",
+      "Epoch 2/50\n",
+      "\u001b[1m 99999/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 9ms/step - loss: 0.0312\n",
+      "Epoch 2: val_loss improved from 0.04003 to 0.02407, saving model to lstm_autoencoder_best.keras\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m995s\u001b[0m 10ms/step - loss: 0.0289 - val_loss: 0.0241\n",
+      "Epoch 3/50\n",
+      "\u001b[1m 99995/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 10ms/step - loss: 0.0223\n",
+      "Epoch 3: val_loss improved from 0.02407 to 0.01857, saving model to lstm_autoencoder_best.keras\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1008s\u001b[0m 10ms/step - loss: 0.0214 - val_loss: 0.0186\n",
+      "Epoch 4/50\n",
+      "\u001b[1m 99997/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - loss: 0.0190\n",
+      "Epoch 4: val_loss did not improve from 0.01857\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1123s\u001b[0m 11ms/step - loss: 0.0184 - val_loss: 0.0251\n",
+      "Epoch 5/50\n",
+      "\u001b[1m 99997/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - loss: 0.0169\n",
+      "Epoch 5: val_loss did not improve from 0.01857\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1156s\u001b[0m 12ms/step - loss: 0.0175 - val_loss: 0.0201\n",
+      "Epoch 6/50\n",
+      "\u001b[1m 99998/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 11ms/step - loss: 0.0179\n",
+      "Epoch 6: val_loss did not improve from 0.01857\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1151s\u001b[0m 12ms/step - loss: 0.0212 - val_loss: 0.0244\n",
+      "Epoch 7/50\n",
+      "\u001b[1m 99999/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 0.0189\n",
+      "Epoch 7: val_loss improved from 0.01857 to 0.01277, saving model to lstm_autoencoder_best.keras\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m871s\u001b[0m 9ms/step - loss: 0.0160 - val_loss: 0.0128\n",
+      "Epoch 8/50\n",
+      "\u001b[1m 99997/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 0.0142\n",
+      "Epoch 8: val_loss did not improve from 0.01277\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m825s\u001b[0m 8ms/step - loss: 0.0141 - val_loss: 0.0164\n",
+      "Epoch 9/50\n",
+      "\u001b[1m 99999/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 0.0128\n",
+      "Epoch 9: val_loss improved from 0.01277 to 0.01211, saving model to lstm_autoencoder_best.keras\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m816s\u001b[0m 8ms/step - loss: 0.0129 - val_loss: 0.0121\n",
+      "Epoch 10/50\n",
+      "\u001b[1m 99996/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 0.0136\n",
+      "Epoch 10: val_loss did not improve from 0.01211\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m816s\u001b[0m 8ms/step - loss: 0.0133 - val_loss: 0.0144\n",
+      "Epoch 11/50\n",
+      "\u001b[1m 99994/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 0.0336\n",
+      "Epoch 11: val_loss did not improve from 0.01211\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m816s\u001b[0m 8ms/step - loss: 0.1012 - val_loss: 0.3372\n",
+      "Epoch 12/50\n",
+      "\u001b[1m 99997/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 0.3449\n",
+      "Epoch 12: val_loss did not improve from 0.01211\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m825s\u001b[0m 8ms/step - loss: 0.3898 - val_loss: 0.4675\n",
+      "Epoch 13/50\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 0.5317\n",
+      "Epoch 13: val_loss did not improve from 0.01211\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m825s\u001b[0m 8ms/step - loss: 0.5689 - val_loss: 0.6273\n",
+      "Epoch 14/50\n",
+      "\u001b[1m 99998/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 8ms/step - loss: 0.6369\n",
+      "Epoch 14: val_loss did not improve from 0.01211\n",
+      "\u001b[1m100000/100000\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m855s\u001b[0m 9ms/step - loss: 0.6484 - val_loss: 0.6802\n",
+      "Epoch 14: early stopping\n",
+      "Restoring model weights from the end of the best epoch: 9.\n",
+      "\n",
+      "Addestramento Completato\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# E' stato effetuato un test per capire le performance su RTX 4050 e delineare un numero di steps per epoca adeguato per completare un epoca in circa 30 minuti.\n",
